gcc/testsuite/g++.dg/template/error13.C
// PR c++/15227

template<typename> struct A {};

template<typename T> void A<T>::B::foo() {} // { dg-error "" }
